--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "demo",
+  "name": "blog-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.23.3",
-    "axios": "^0.19.0",
-    "echarts": "^4.3.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "antd": "^3.26.7",
+    "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^7.1.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-quill": "^1.3.3",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-transition-group": "^4.2.2",
-    "redux": "^4.0.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^3.3.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.13.1"
   }
 }
